[package]
name = "zeroclaw-lite"
version = "0.1.0"
edition = "2021"
description = "Minimal ZeroClaw agent — lightweight tool-calling agent for constrained hardware"
rust-version = "1.81"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
parking_lot = "0.12"
toml = "0.8"
directories = "5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
